# pdflibrarian

./: .gitignore  .travis.yml  Makefile.am  README.md  bootstrap  configure.ac  new_release
.github/workflows/: ci.yml  test.yml
debian/: changelog  control.in  copyright
src/: bibtex.pm  config.pm  fmdt.man  fmdt.pl  fmdtools.pm  library.pm  pdf-lbr-edit-bib.pl  pdf-lbr-import-pdf.pl  pdf-lbr-iso4-abbr.pl  pdf-lbr-output-bib.pl  pdf-lbr-output-key.pl  pdf-lbr-query-ads.pl  pdf-lbr-read-bib.pl  pdf-lbr-rebuild-links.pl  pdf-lbr-rebuild.pl  pdf-lbr-remove-pdf.pl  pdf-lbr-replace-pdf.pl  pdf.pm  query_dialog.pm  title_abbr.pm  util.pm
src-old/: fmdt.man  fmdt.pl  fmdtools.pm
src-old/pdf/: bib.pm  org.pm
src/pdf/: bib.pm  org.pm  www.pm
