bin_SCRIPTS = \
	pre-inst/pdf-lbr-edit-bib \
	pre-inst/pdf-lbr-import-pdf \
	pre-inst/pdf-lbr-output-bib \
	pre-inst/pdf-lbr-query-ads \
	pre-inst/pdf-lbr-rebuild-links \
	pre-inst/pdf-lbr-remove-pdf \
	pre-inst/pdf-lbr-replace-pdf \
	$(END_OF_LINE)

pkgperllib_DATA = \
	pre-inst/config.pm \
	src/bibtex.pm \
	src/library.pm \
	src/query_dialog.pm \
	src/util.pm \
	$(END_OF_LINE)

xslt_DATA = \
	src/bibtex.xsl \
	src/dublincore.xsl \
	$(END_OF_LINE)

EXTRA_DIST = \
	$(DATA) \
	debian \
	$(END_OF_LINE)

BUILT_SOURCES = \
	$(END_OF_LINE)
